@@ -1,3 +1,4 @@
+from zope.i18nmessageid import MessageFactory
 from zope.interface import implements
 from zope.schema.interfaces import IVocabularyFactory
 from zope.schema.vocabulary import SimpleTerm
@@ -5,6 +6,8 @@ from zope.schema.vocabulary import SimpleVocabulary
 from zope.site.hooks import getSite
 
 from Products.CMFCore.utils import getToolByName
+
+_ = MessageFactory('plone')
 
 class SkinsVocabulary(object):
     """Vocabulary factory for skins.
@@ -33,20 +36,29 @@ class SkinsVocabulary(object):
       >>> len(skins.by_token)
       2
 
-      >>> de = skins.by_token['Plone Kitty']
-      >>> de.title, de.token, de.value
+      >>> term = skins.by_token['Plone Kitty']
+      >>> term.title, term.token, term.value
       ('Plone Kitty', 'Plone Kitty', 'Plone Kitty')
+      
+      Plone Default is a special case that gets a different title
+      for clarification.
+      >>> term = skins.by_token['Plone Default']
+      >>> term.title, term.token, term.value
+      (u'(Unstyled)', 'Plone Default', 'Plone Default')
     """
     implements(IVocabularyFactory)
 
     def __call__(self, context):
-        items = []
+        terms = []
         site = getSite()
         stool = getToolByName(site, 'portal_skins', None)
         if stool is not None:
             items = list(stool.getSkinSelections())
             items.sort()
-            items = [SimpleTerm(i, i, i) for i in items]
-        return SimpleVocabulary(items)
+            if 'Plone Default' in items:
+                terms = [SimpleTerm('Plone Default', 'Plone Default', _(u'(Unstyled)'))]
+                items.remove('Plone Default')
+            terms += [SimpleTerm(i, i, i) for i in items]
+        return SimpleVocabulary(terms)
 
 SkinsVocabularyFactory = SkinsVocabulary()
